cmd/bosc/tests/owned_scalar_transfer_dispose_via_new_owner_err_test.bos
package main

import "fmt"

fn main() {
	handle owned i64 := 10
	b i64 := handle             // borrow the resource via the source
	handle2 owned i64 := handle // transfer ownership to handle2
	dispose(handle2)            // the shared resource is freed through the new owner
	fmt.print("%d\n", b)        // error: b views the now-freed resource
}
